--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -11,3 +11,15 @@
     // Large screens
     @media screen and (min-width: 1100px) {}
 }
+
+.dashboard {
+    height: calc(100vh - 130px);
+}
+
+.AboutMe {
+    height: calc(100vh - 130px);
+}
+
+.skills {
+    height: 100%;
+}
